chore: release v1.1.0
