# typescript/src/models/ChatsGet200ResponseOneOfChatsInner.ts
@@ -1,0 +1,113 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ChatsGet200ResponseOneOfChatsInnerVerses } from './ChatsGet200ResponseOneOfChatsInnerVerses';
+import {
+    ChatsGet200ResponseOneOfChatsInnerVersesFromJSON,
+    ChatsGet200ResponseOneOfChatsInnerVersesFromJSONTyped,
+    ChatsGet200ResponseOneOfChatsInnerVersesToJSON,
+    ChatsGet200ResponseOneOfChatsInnerVersesToJSONTyped,
+} from './ChatsGet200ResponseOneOfChatsInnerVerses';
+
+/**
+ * 
+ * @export
+ * @interface ChatsGet200ResponseOneOfChatsInner
+ */
+export interface ChatsGet200ResponseOneOfChatsInner {
+    /**
+     * 
+     * @type {string}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    id?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    title?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    model?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    createdAt?: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    lastMessageAt?: Date;
+    /**
+     * 
+     * @type {ChatsGet200ResponseOneOfChatsInnerVerses}
+     * @memberof ChatsGet200ResponseOneOfChatsInner
+     */
+    verses?: ChatsGet200ResponseOneOfChatsInnerVerses;
+}
+
+/**
+ * Check if a given object implements the ChatsGet200ResponseOneOfChatsInner interface.
+ */
+export function instanceOfChatsGet200ResponseOneOfChatsInner(value: object): value is ChatsGet200ResponseOneOfChatsInner {
+    return true;
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerFromJSON(json: any): ChatsGet200ResponseOneOfChatsInner {
+    return ChatsGet200ResponseOneOfChatsInnerFromJSONTyped(json, false);
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): ChatsGet200ResponseOneOfChatsInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'title': json['title'] == null ? undefined : json['title'],
+        'model': json['model'] == null ? undefined : json['model'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+        'lastMessageAt': json['last_message_at'] == null ? undefined : (new Date(json['last_message_at'])),
+        'verses': json['verses'] == null ? undefined : ChatsGet200ResponseOneOfChatsInnerVersesFromJSON(json['verses']),
+    };
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerToJSON(json: any): ChatsGet200ResponseOneOfChatsInner {
+    return ChatsGet200ResponseOneOfChatsInnerToJSONTyped(json, false);
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerToJSONTyped(value?: ChatsGet200ResponseOneOfChatsInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'title': value['title'],
+        'model': value['model'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+        'last_message_at': value['lastMessageAt'] == null ? undefined : ((value['lastMessageAt']).toISOString()),
+        'verses': ChatsGet200ResponseOneOfChatsInnerVersesToJSON(value['verses']),
+    };
+}
+
