# typescript/src/models/ChatsGet200ResponseOneOfChatsInnerVerses.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ChatsGet200ResponseOneOfChatsInnerVerses
+ */
+export interface ChatsGet200ResponseOneOfChatsInnerVerses {
+    /**
+     * 
+     * @type {string}
+     * @memberof ChatsGet200ResponseOneOfChatsInnerVerses
+     */
+    book?: string;
+    /**
+     * 
+     * @type {number}
+     * @memberof ChatsGet200ResponseOneOfChatsInnerVerses
+     */
+    chapter?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof ChatsGet200ResponseOneOfChatsInnerVerses
+     */
+    startVerse?: number;
+    /**
+     * 
+     * @type {number}
+     * @memberof ChatsGet200ResponseOneOfChatsInnerVerses
+     */
+    endVerse?: number;
+}
+
+/**
+ * Check if a given object implements the ChatsGet200ResponseOneOfChatsInnerVerses interface.
+ */
+export function instanceOfChatsGet200ResponseOneOfChatsInnerVerses(value: object): value is ChatsGet200ResponseOneOfChatsInnerVerses {
+    return true;
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerVersesFromJSON(json: any): ChatsGet200ResponseOneOfChatsInnerVerses {
+    return ChatsGet200ResponseOneOfChatsInnerVersesFromJSONTyped(json, false);
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerVersesFromJSONTyped(json: any, ignoreDiscriminator: boolean): ChatsGet200ResponseOneOfChatsInnerVerses {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'book': json['book'] == null ? undefined : json['book'],
+        'chapter': json['chapter'] == null ? undefined : json['chapter'],
+        'startVerse': json['start_verse'] == null ? undefined : json['start_verse'],
+        'endVerse': json['end_verse'] == null ? undefined : json['end_verse'],
+    };
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerVersesToJSON(json: any): ChatsGet200ResponseOneOfChatsInnerVerses {
+    return ChatsGet200ResponseOneOfChatsInnerVersesToJSONTyped(json, false);
+}
+
+export function ChatsGet200ResponseOneOfChatsInnerVersesToJSONTyped(value?: ChatsGet200ResponseOneOfChatsInnerVerses | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'book': value['book'],
+        'chapter': value['chapter'],
+        'start_verse': value['startVerse'],
+        'end_verse': value['endVerse'],
+    };
+}
+
