# typescript/src/models/FavoritesGet200ResponseFavoritesInnerConversationsInner.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface FavoritesGet200ResponseFavoritesInnerConversationsInner
+ */
+export interface FavoritesGet200ResponseFavoritesInnerConversationsInner {
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerConversationsInner
+     */
+    id?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerConversationsInner
+     */
+    title?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerConversationsInner
+     */
+    model?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof FavoritesGet200ResponseFavoritesInnerConversationsInner
+     */
+    lastMessageAt?: Date;
+}
+
+/**
+ * Check if a given object implements the FavoritesGet200ResponseFavoritesInnerConversationsInner interface.
+ */
+export function instanceOfFavoritesGet200ResponseFavoritesInnerConversationsInner(value: object): value is FavoritesGet200ResponseFavoritesInnerConversationsInner {
+    return true;
+}
+
+export function FavoritesGet200ResponseFavoritesInnerConversationsInnerFromJSON(json: any): FavoritesGet200ResponseFavoritesInnerConversationsInner {
+    return FavoritesGet200ResponseFavoritesInnerConversationsInnerFromJSONTyped(json, false);
+}
+
+export function FavoritesGet200ResponseFavoritesInnerConversationsInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): FavoritesGet200ResponseFavoritesInnerConversationsInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'title': json['title'] == null ? undefined : json['title'],
+        'model': json['model'] == null ? undefined : json['model'],
+        'lastMessageAt': json['last_message_at'] == null ? undefined : (new Date(json['last_message_at'])),
+    };
+}
+
+export function FavoritesGet200ResponseFavoritesInnerConversationsInnerToJSON(json: any): FavoritesGet200ResponseFavoritesInnerConversationsInner {
+    return FavoritesGet200ResponseFavoritesInnerConversationsInnerToJSONTyped(json, false);
+}
+
+export function FavoritesGet200ResponseFavoritesInnerConversationsInnerToJSONTyped(value?: FavoritesGet200ResponseFavoritesInnerConversationsInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'title': value['title'],
+        'model': value['model'],
+        'last_message_at': value['lastMessageAt'] == null ? undefined : ((value['lastMessageAt']).toISOString()),
+    };
+}
+
