# typescript/src/models/FavoritesGet200ResponseFavoritesInnerImagesInner.ts
@@ -1,0 +1,97 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface FavoritesGet200ResponseFavoritesInnerImagesInner
+ */
+export interface FavoritesGet200ResponseFavoritesInnerImagesInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof FavoritesGet200ResponseFavoritesInnerImagesInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerImagesInner
+     */
+    storagePath?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerImagesInner
+     */
+    prompt?: string | null;
+    /**
+     * 
+     * @type {string}
+     * @memberof FavoritesGet200ResponseFavoritesInnerImagesInner
+     */
+    size?: string | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof FavoritesGet200ResponseFavoritesInnerImagesInner
+     */
+    createdAt?: Date;
+}
+
+/**
+ * Check if a given object implements the FavoritesGet200ResponseFavoritesInnerImagesInner interface.
+ */
+export function instanceOfFavoritesGet200ResponseFavoritesInnerImagesInner(value: object): value is FavoritesGet200ResponseFavoritesInnerImagesInner {
+    return true;
+}
+
+export function FavoritesGet200ResponseFavoritesInnerImagesInnerFromJSON(json: any): FavoritesGet200ResponseFavoritesInnerImagesInner {
+    return FavoritesGet200ResponseFavoritesInnerImagesInnerFromJSONTyped(json, false);
+}
+
+export function FavoritesGet200ResponseFavoritesInnerImagesInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): FavoritesGet200ResponseFavoritesInnerImagesInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'storagePath': json['storage_path'] == null ? undefined : json['storage_path'],
+        'prompt': json['prompt'] == null ? undefined : json['prompt'],
+        'size': json['size'] == null ? undefined : json['size'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+    };
+}
+
+export function FavoritesGet200ResponseFavoritesInnerImagesInnerToJSON(json: any): FavoritesGet200ResponseFavoritesInnerImagesInner {
+    return FavoritesGet200ResponseFavoritesInnerImagesInnerToJSONTyped(json, false);
+}
+
+export function FavoritesGet200ResponseFavoritesInnerImagesInnerToJSONTyped(value?: FavoritesGet200ResponseFavoritesInnerImagesInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'storage_path': value['storagePath'],
+        'prompt': value['prompt'],
+        'size': value['size'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+    };
+}
+
