# typescript/src/models/TagsGet200ResponseTagsInner.ts
@@ -1,0 +1,89 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Hey Bible App API
+ * Public API for accessing Bible app data
+ *
+ * The version of the OpenAPI document: 1.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface TagsGet200ResponseTagsInner
+ */
+export interface TagsGet200ResponseTagsInner {
+    /**
+     * 
+     * @type {number}
+     * @memberof TagsGet200ResponseTagsInner
+     */
+    id?: number;
+    /**
+     * 
+     * @type {string}
+     * @memberof TagsGet200ResponseTagsInner
+     */
+    name?: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof TagsGet200ResponseTagsInner
+     */
+    color?: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof TagsGet200ResponseTagsInner
+     */
+    createdAt?: Date;
+}
+
+/**
+ * Check if a given object implements the TagsGet200ResponseTagsInner interface.
+ */
+export function instanceOfTagsGet200ResponseTagsInner(value: object): value is TagsGet200ResponseTagsInner {
+    return true;
+}
+
+export function TagsGet200ResponseTagsInnerFromJSON(json: any): TagsGet200ResponseTagsInner {
+    return TagsGet200ResponseTagsInnerFromJSONTyped(json, false);
+}
+
+export function TagsGet200ResponseTagsInnerFromJSONTyped(json: any, ignoreDiscriminator: boolean): TagsGet200ResponseTagsInner {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'color': json['color'] == null ? undefined : json['color'],
+        'createdAt': json['created_at'] == null ? undefined : (new Date(json['created_at'])),
+    };
+}
+
+export function TagsGet200ResponseTagsInnerToJSON(json: any): TagsGet200ResponseTagsInner {
+    return TagsGet200ResponseTagsInnerToJSONTyped(json, false);
+}
+
+export function TagsGet200ResponseTagsInnerToJSONTyped(value?: TagsGet200ResponseTagsInner | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'name': value['name'],
+        'color': value['color'],
+        'created_at': value['createdAt'] == null ? undefined : ((value['createdAt']).toISOString()),
+    };
+}
+
